--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_GOOGLE_CONSENT_KEY = AIzaSyBKURk-fB0f1-rEuA6nlOjXo5qZrAkEV5U
+REACT_APP_GOOGLE_CONSENT_KEY=AIzaSyBKURk-fB0f1-rEuA6nlOjXo5qZrAkEV5U
 REACT_APP_API_KEY=WbHSZV1rd5Z+xdgkKr/xjw==neewlnIkVq5FLcao
