--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.7",
     "google-map-react": "^2.2.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
+    "@types/lodash": "^4.14.202",
     "prettier": "^3.2.4"
   }
 }
